[package]
name = "monkey-interpreter"
version = "0.1.0"
authors = ["Danielle Brook-Roberge <danielle+remax@hackcapital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1"
derive_more = "0.99.11"
strum = "0.20"
strum_macros = "0.20"

[profile.release]
debug = true
